apps/argocd-test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-test
  namespace: argocd-test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: argocd-test
  template:
    metadata:
      labels:
        app: argocd-test
    spec:
      containers:
      - name: app
        image: deviliam/argocd-test:0779352587228988562aff9271bb180f60c04df9
        ports:
        - containerPort: 80
