apps/argocd-test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-test
  namespace: argocd-test
spec:
  selector:
    app: argocd-test
  ports:
  - port: 80
    targetPort: 80
